Separate controller code for /api/aaa/user/search in aaa